# fastapi-test

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
microshop/: main.py
microshop/api_v1/: __init__.py
microshop/api_v1/products/: crud.py  schemas.py  views.py
microshop/core/: config.py
microshop/core/models/: __init__.py  base.py  db_helper.py  product.py
microshop/users/: crud.py  schemas.py  views.py
