[tool.poetry]
name = "microshop"
version = "0.1.0"
description = ""
authors = ["MarkCesium <cesiummark01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.105.0"
uvicorn = { extras = ["standart"], version = "^0.25.0" }
pydantic = {extras = ["email"], version = "^2.5.3"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}
asyncpg = "^0.29.0"
pydantic-settings = "^2.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
start = "microshop.main:start"
